# GoogleCloudPlatform-_-mdk-lightweight

./: .gitignore  .pre-commit-config.yaml  Makefile.in  README.md  configure  configure.ac  mypy.ini  pyproject.toml  todo.md
.github/: dependabot.yml
scripts/: jinja2bkstg.py
src/mdk/: __init__.py
src/mdk/cli/: __init__.py  init.py  list.py  main.py  run.py
src/mdk/config/: __init__.py  _util.py  get_config_value.py  shared_models.py
src/mdk/custom_job/: __init__.py  example_usage.md  models.py  utils.py
src/mdk/data/: __init__.py  dataset_handler.py  db.py  example_usage.md
src/mdk/model/: __init__.py
src/mdk/model/deployment/: __init__.py  cli.py  models.py  strategies.py
src/mdk/model/io/: __init__.py  base.py  cli.py  example_usage.md  factory.py  pickle.py  pytorch.py  xgboost.py
src/mdk/model/monitoring/: __init__.py  cli.py  example_usage.md  models.py  strategies.py
src/mdk/model/registry/: __init__.py  cli.py  example_usage.md  models.py  strategies.py
src/mdk/pipeline_tools/: build_images.py  ci_build_utils.py  ci_cd_utils.py  compile_pipeline.py  execute_pipeline.py
src/mdk/util/: __init__.py  auth.py  auto_retraining.py  framework.py  storage.py
templates/: .bandit.yaml  .gitignore  .pre-commit-config.yaml  README.md  copier.yml  mypy.ini  pyproject.toml.jinja
templates/.github/: dependabot.yml  infra_config.yml  pull_request_template.md
templates/.github/scripts/: github_actions_model_publish_ops.py
templates/.github/workflows/: README.md  README_GithubActions.md  build_and_deploy_pipelines.yml  publish_or_rollback_model.yml  trigger-pipeline.yml
templates/docs/configs/: mdk_general_config_usage.md  mdk_pipeline_config_usage.md
templates/docs/modules/: mdk_custom_job_usage.md  mdk_data_usage.md  mdk_model_deployment_usage.md  mdk_model_io_usage.md  mdk_model_monitoring_usage.md  mdk_model_registry_usage.md
templates/docs/pipelines/: pipelines_conditional_logic_usage.md
templates/docs/promotion/: model-promotion.md
templates/docs/publishing/: mdk_publish_and_rollback_usage.md
templates/docs/retraining/: auto_retraining_monitoring.md
templates/examples/scripts/: create_feature_store_group.py  load-dry-beans-data-for-fs.sh  load-dry-beans-data-to-bq.sh
templates/publish_and_rollback/: operations.yml.jinja
templates/src/model_workflow/: __init__.py  batch_predict.py  demo_byoc.py  evaluate.py  optimize_hyperparameters.py  prepare.py  run.py  train.py
terraform-lite/: README.md  backend.tf  lite.tfvars  locals.tf  main.tf  outputs.tf  providers.tf  variables.tf
tests/unit_tests/: test_serialize.py  test_serializePyTorch.py
tmp/: check_license.py
(+75 files in other folders)
