# Copyright 2026 Google LLC.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[project]
name = "mdk"
version = "0.1.0"
description = "MLOps Development Kit"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-auth>=2.40.3",
    "google-cloud-aiplatform>=1.101.0",
    "ipython==8.12.3",
    "kfp>=2.13.0",
    "pandas>=2.3.1",
    "pandas-gbq>=0.29.2",
    "python-dotenv>=1.1.1",
    "pydantic>=2.0.1",
    "bigframes>=2.21.0",
    "db-dtypes>=1.4.3",
    "pyOpenSSL"
]

[project.scripts]
mdk = "mdk.cli.main:main"

[build-system]
requires = [
    "setuptools",
]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "build>=1.2.2.post1",
    "mypy>=1.16.1",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "setuptools>=80.8.0",
    "twine>=6.2.0",
    "scikit-learn>=1.7.2",
    "xgboost<=3.0.2",
    "shap>=0.48.0",
    "copier",
    "docker"
]
